# tinyRenderer

./: .gitignore  CMakeLists.txt  README.md
include/: camera.h  geometry.h  model.h  mygl.h  tgaimage.h
src/: camera.cpp  drawLine.cpp  drawTrangle.cpp  drawWithLight.cpp  geometry.cpp  main.cpp  model.cpp  mygl.cpp  tgaimage.cpp  zbuffer.cpp
